# AI-Image-Creator

./: LICENSE  README.md  build.sh  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
