[package]
name = "ai-image-creator"
version = "1.0.0"
description = "Fantastic AI Image Creator"
authors = ["Aventa Tech LLC"]
edition = "2021"

[lib]
name = "ai_image_creator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
